[project]
name = "randwiki"
version = "0.1.0"
description = "Add a short description here"
requires-python = ">= 3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
randwiki = { path = ".", editable = true }

[tool.pixi.tasks]
python = ">3.12.3,<3.13"
request = ">2.31.0,<2.32"
